# ferrum

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml  release.yml
bench/: README.md  report.sh  run.sh  test.sh
bench/tasks/001-multiline-edit/: prompt.md  setup.sh  validate.sh
bench/tasks/002-service-diagnosis/: prompt.md  setup.sh  validate.sh
bench/tasks/003-xdotool-command-semantics/: prompt.md  score.sh  setup.sh  validate.sh
bench/tasks/004-grep-context-filtering/: prompt.md  score.sh  setup.sh  validate.sh
bench/tasks/005-grep-context-required/: prompt.md  score.sh  setup.sh  validate.sh
bench/tasks/006-ls-hidden-limit/: prompt.md  score.sh  setup.sh  validate.sh
bench/tasks/007-read-range-truncation/: prompt.md  (+3 more)
docs/: acp.md  background-tasks.md  benchmarks.md  codeberg.md  colors.md  config.md  containment.md  context-accounting.md  ferrum.1  ferrum.1.md  images.md  mcp.md  provider-secrets.md  providers.md  release.md  resource-boundaries.md  roadmap.md  security.md  sessions.md  skills.md  spec.md  tool-authority.md  tools.md  usage.md  zed.md
packaging/linux/: Dockerfile
palettes/: ansi-dark.toml  ansi-light.toml  ayu.toml  catppuccin-macchiato.toml  catppuccin.toml  dracula.toml  everforest.toml  flexoki.toml  gruvbox.toml  high-contrast-amber.toml  high-contrast-cyberpunk.toml  high-contrast-fire-ice.toml  high-contrast-matrix.toml  high-contrast-neon.toml  high-contrast-terminal.toml  kanagawa.toml  monokai.toml  nord.toml  one-dark.toml  opencode.toml  pi-dark.toml  rosepine.toml  solarized.toml  tokyonight.toml
scripts/: check-release-docs.sh  package-linux-inner.sh  package-linux.sh  sync-release-version.sh  test-package-linux.sh
src/: acp.rs  atomic_file.rs  cancel.rs  cli.rs  config.rs  context.rs  main.rs  mcp.rs  persistence.rs  picker.rs  process_containment.rs  skills.rs  terminal_text.rs  text_truncate.rs  ui_colors.rs  usage.rs
src/agent/: events.rs  messages.rs  mod.rs  tools.rs
src/auth/: mod.rs  openai_codex.rs
src/mcp/: transport.rs
src/providers/: fake.rs  mod.rs  openai.rs  transport.rs
src/session/: jsonl.rs  mod.rs
src/tools/: bash.rs  edit.rs  find.rs  grep.rs  ls.rs  mod.rs  path.rs  read.rs  shell_guard.rs  shell_policy.rs  wait.rs  write.rs  write_policy.rs
tests/: acp_stdio.rs
(+53 files in other folders)
