[package]
name = "ferrum"
version = "0.6.6"
edition = "2024"
description = "A small Rust-native Linux coding agent"
license = "MIT"
readme = "README.md"
keywords = ["ai", "agent", "cli", "coding"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
futures-util = "0.3"
globset = "0.4"
ignore = "0.4"
libc = "0.2"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
rustyline = "16"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
url = "2"
serde_json = "1"
regex = "1"
similar = "2"
time = { version = "0.3", features = ["formatting"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "time", "fs", "sync"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
