[package]
name = "ferrum"
version = "0.7.3"
edition = "2024"
description = "A small Rust-native Linux coding agent"
license = "MIT"
readme = "README.md"
keywords = ["ai", "agent", "cli", "coding"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.generate-rpm]
# Release assets are supplied by scripts/package-linux-inner.sh with --set-metadata.

[dependencies]
anyhow = "1"
agent-client-protocol-schema = { version = "1.4", default-features = false }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
futures-util = "0.3"
globset = "0.4"
httpdate = "1"
ignore = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
libc = "0.2"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
rustyline = "16"
serde = { version = "1", features = ["derive"] }
sha2 = "0.11"
url = "2"
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
similar = "3"
time = { version = "0.3", features = ["formatting"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "io-std", "time", "fs", "sync"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
tree-sitter = "0.26.10"
tree-sitter-bash = "0.25.1"

[dev-dependencies]
tempfile = "3"
